--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@wombo/dream-api",
+	"name": "wombo-dream-api",
 	"version": "0.1.0",
 	"description": "Unofficial API for Wombo Dream",
 	"main": "dist/index.js",
