--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
 	"name": "wombo-dream-api",
-	"version": "0.1.1fix",
+	"version": "0.1.2",
 	"description": "Unofficial API for Wombo Dream",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"scripts": {
-		"build": "tsc"
+		"build": "tsc",
+		"prettify": "npx prettier --write \"**/*.ts\""
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/leopoldhub/wombo-dream-api"
+		"url": "git+https://github.com/leopoldhub/wombo-dream-api.git"
 	},
 	"keywords": [
 		"wombo",
@@ -29,6 +30,11 @@
 	},
 	"devDependencies": {
 		"@types/sprintf-js": "^1.1.2",
+		"prettier": "^2.5.1",
 		"typescript": "^4.6.2"
-	}
+	},
+	"bugs": {
+		"url": "https://github.com/leopoldhub/wombo-dream-api/issues"
+	},
+	"homepage": "https://github.com/leopoldhub/wombo-dream-api#readme"
 }
