--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"target": "es5",
 		"module": "commonjs",
-		"lib": ["es2017", "es7", "es6", "es5"],
+		"lib": ["es2017", "es7", "es6", "es5", "dom"],
 		"declaration": true,
 		"outDir": "dist",
 		"strict": true,
