--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "wombo-dream-api",
-	"version": "0.1.2",
+	"version": "0.1.3",
 	"description": "Unofficial API for Wombo Dream",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -23,6 +23,7 @@
 	"author": "leopoldhub",
 	"license": "MIT",
 	"dependencies": {
+		"@types/node": "^17.0.21",
 		"axios": "^0.26.1",
 		"fs": "^0.0.1-security",
 		"sleep-promise": "^9.1.0",
